tests/js_error/source_locations/expression/binary/loose_equal.exp
Error: 
  ┌ tests/js_error/source_locations/expression/binary/loose_equal.js:1:40
  |
1 | 1 == ({ [Symbol.toPrimitive]() { throw new Error() } })
  |                                        ^
Stack trace:
  at <anonymous> (tests/js_error/source_locations/expression/binary/loose_equal.js:1:40)
  at <global> (tests/js_error/source_locations/expression/binary/loose_equal.js:1:3)